--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,22 @@
 name: compose2target
-description: A sample command-line application.
-version: 0.0.1
-# repository: https://github.com/my_org/my_repo
+description: Compose to run/quadlet/... application
+version: 0.1.1
+repository: https://github.com/chla28/compose2target
 
 environment:
   sdk: ^3.8.0-70.0.dev
 
 # Add regular dependencies here.
 dependencies:
-  args: ^2.4.2
-  yaml: ^3.1.2
+  args: ^2.7.0
+  yaml: ^3.1.3
   checked_yaml: ^2.0.3
   json_annotation: ^4.9.0
-  http: ^1.2.2
+  http: ^1.3.0
   path: ^1.9.1
-  process_run: ^1.2.2
+  process_run: ^1.2.4
+  #pubspec_parse: ^1.5.0
 
 dev_dependencies:
-  lints: ^5.0.0
-  test: ^1.24.0
+  lints: ^5.1.1
+  test: ^1.25.15
