--- a/compose_samples/mariadb_mapping.yaml
+++ b/compose_samples/mariadb_mapping.yaml
@@ -12,8 +12,8 @@ services:
             - MARIADB_PORT: 3306
         environment:
             - MYSQL_USER=$MARIADB_USER
-            - MYSQL_PASSWORD=$MARIADB_PASSWORD
-            - MYSQL_DATABASE=$MARIADB_DATABASE
+            - MYSQL_PASSWORD="$MARIADB_PASSWORD"
+            - MYSQL_DATABASE="$MARIADB_DATABASE"
         deploy:
             resources:
                 limits:
