--- a/mapping/mappingFile.yaml
+++ b/mapping/mappingFile.yaml
@@ -9,6 +9,17 @@ variables:
   MARIADB_USER:       "chlauser"
   MARIADB_PASSWORD:   "chlauser1"
   MARIADB_DATABASE:   "chladb"
+  JAEGERPROTO_PORT:   "14250"
+  JAEGERTHRIFT_PORT:  "14268"
+  JAEGERADMIN_PORT:   "14269"
+  JAEGERGRPC_PORT:    "4317"
+  JAEGERHTTP_PORT:    "4318"
+  JAEGERCONFIG_PORT:  "5778"
+  #JAEGERZIPKIN_PORT: "9411"
+  JAEGERGUI_PORT:     "16686"
+  ENVOY_ADM_PORT:     "9901"
+  ENVOY_HTTP_PORT:    "8082"
+  ENVOY_GRPC_PORT:    "8083"
 genericoutput: #  Options added to all containers
     labels:
         - comment= "Chla Configuration"
@@ -47,6 +58,20 @@ services:
             - /local/data/DB/redis_data: /data
         ports:
             - REDIS_PORT:6379
+    jaeger:
+        labels:
+            - metrics: "false"
+        #image: docker.io/jaegertracing/all-in-one:1.60
+        image: registry.redhat.io/rhosdt/jaeger-all-in-one-rhel8:latest
+        ports:
+            #- JAEGERPROTO_PORT: 14250
+            #- JAEGERTHRIFT_PORT: 14268
+            - JAEGERADMIN_PORT: 14269
+            - JAEGERGRPC_PORT: 4317
+            - JAEGERHTTP_PORT: 4318
+            #- JAEGERCONFIG_PORT: 5778
+            #- JAEGERZIPKIN_PORT: 9411
+            - JAEGERGUI_PORT: 16686
 #metrics:
 #    environment:
 #        - JAVA_TOOL_OPTIONS=-javaagent:/mnt/opentelemetry-javaagent.jar
