--- a/mapping/mappingFile.yaml
+++ b/mapping/mappingFile.yaml
@@ -1,25 +1,28 @@
 variables:
-  HOST_NAME:          "127.0.0.1"
-  LOCALIP:            "___LOCALIP___"
-  SERVICENAME:        "NOTSET"
-  MARIADB_PORT:       "14306"
-  REDIS_PORT:         "6379"
-  OTELGRPC_PORT:      "4317"
-  OTELHTTP_PORT:      "4318"
-  MARIADB_USER:       "chlauser"
-  MARIADB_PASSWORD:   "chlauser1"
-  MARIADB_DATABASE:   "chladb"
-  JAEGERPROTO_PORT:   "14250"
-  JAEGERTHRIFT_PORT:  "14268"
-  JAEGERADMIN_PORT:   "14269"
-  JAEGERGRPC_PORT:    "4317"
-  JAEGERHTTP_PORT:    "4318"
-  JAEGERCONFIG_PORT:  "5778"
-  #JAEGERZIPKIN_PORT: "9411"
-  JAEGERGUI_PORT:     "16686"
-  ENVOY_ADM_PORT:     "9901"
-  ENVOY_HTTP_PORT:    "8082"
-  ENVOY_GRPC_PORT:    "8083"
+    HOST_NAME:          "127.0.0.1"
+    LOCALIP:            "___LOCALIP___"
+    SERVICENAME:        "NOTSET"
+    MARIADB_PORT:       "14306"
+    REDIS_PORT:         "6379"
+    OTELGRPC_PORT:      "4317"
+    OTELHTTP_PORT:      "4318"
+    MARIADB_USER:       "chlauser"
+    MARIADB_PASSWORD:   "chlauser1"
+    MARIADB_DATABASE:   "chladb"
+    JAEGERPROTO_PORT:   "14250"
+    JAEGERTHRIFT_PORT:  "14268"
+    JAEGERADMIN_PORT:   "14269"
+    JAEGERGRPC_PORT:    "4317"
+    JAEGERHTTP_PORT:    "4318"
+    JAEGERCONFIG_PORT:  "5778"
+    #JAEGERZIPKIN_PORT: "9411"
+    JAEGERGUI_PORT:     "16686"
+    ENVOY_ADM_PORT:     "9901"
+    ENVOY_HTTP_PORT:    "8082"
+    ENVOY_GRPC_PORT:    "8083"
+    LABELC100:          "c100"
+    LABELC110:          "c110"
+    LABELC120:          "c120"
 genericoutput: #  Options added to all containers
     labels:
         - comment= "Chla Configuration"
