--- a/vnr/compose_samples/mariadb_mapping.yaml
+++ b/vnr/compose_samples/mariadb_mapping.yaml
@@ -5,21 +5,20 @@ services:
         image: registry.redhat.io/rhel9/mariadb-1011:latest  #DevMode only
         labels:
             - description:"Database for demo"
+        annotations:
+            - c2t.ha.startcmd.delay="30s"
+            - c2t.ha.monitorcmd.delay="30s"
         restart: always #DevMode only
         volumes: #DevMode only
             - /local/data/DB/Chla_DB: /var/lib/mysql/data:Z
         command: [ "sh", "/home/toto/bin/app",  "--config", "/mnt/config/env.conf" ] #DevMode only
         ports:
             - MARIADB_PORT: 3306
-        environment:
-            - MYSQL_USER=usertoto
-            - MYSQL_PASSWORD="totopwd"
-            - MYSQL_DATABASE="devel-db"
         secrets:
             - mariadb-chla-secret
-        configs:
-            - jhkjhkjhjh
-            - yyy
+        #configs:
+        #    - jhkjhkjhjh
+        #    - yyy
         working_dir: /var/lib/mysql/data
         deploy: #DevMode only
             resources:
