--- a/vnr/compose_samples/mariadb.yaml
+++ b/vnr/compose_samples/mariadb.yaml
@@ -23,6 +23,12 @@ services:
             - jhkjhkjhjh
             - yyy
         working_dir: /var/lib/mysql/data
+        logging:
+            driver: k8s-file
+            options:
+                max-size: 20m
+                max-file: 3
+                path: ${DEFAULTLOGPATH}/name.log
         deploy:
             resources:
                 limits:
