--- a/vnr/compose_samples/mariadb_mapping.yaml
+++ b/vnr/compose_samples/mariadb_mapping.yaml
@@ -34,6 +34,14 @@ services:
         #    - jhkjhkjhjh
         #    - yyy
         working_dir: /var/lib/mysql/data
+        logging:
+            driver: k8s-file
+            options:
+                max-size: 20m
+                max-file: 3
+                path: ${DEFAULTLOGPATH}/name.log
+                labels: "dev_status"
+                env: "os,customer"
         deploy: #DevMode only
             resources:
                 limits:
